REMOVE OLD LIBRARY.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=CMMC WiFi Connector
+name=WiFi Connector Helper
 version=0.1.0
 author=Nat Weerawan <nat.wrw@gmail.com>
 maintainer=Nat Weerawan <nat.wrw@gmail.com>
-sentence=A WiFi Connect Helper (formerly known as WiFi Connector)
-paragraph=An opensource library that makes coding with wifi easier and more happy. Made with love by CMMC
+sentence=**Deprecated** __DO NOT USE THIS LIBRARY__
+paragraph=
 category=Communication
 url=https://github.com/cmmakerclub/WiFiConnector
 architectures=esp8266
