--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=WiFi Connector Helper
-version=0.1.8
+name=WiFi Connector
+version=0.1.9
 author=Nat Weerawan <nat.wrw@gmail.com>
 maintainer=Nat Weerawan <nat.wrw@gmail.com>
 sentence=**Deprecated** __DO NOT USE THIS LIBRARY__
